[package]
name = "mping"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["default", "derive"] }
colored = "3.0.0"
surge-ping = "0.8.2"
futures = "0.3.31"
rand = "0.9.1"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.98"
#time = "0.3.41"
